# tum-mt_benchmarks

./: .gitignore  CMakeLists.txt  CREDITS  README
data/kmeans/: simple
src/: CMakeLists.txt  applicationcontroller.cpp  applicationcontroller.hpp  benchmarkbase.cpp  benchmarkbase.hpp  clglobal.hpp  computecontroller.cpp  computecontroller.hpp  main.cpp  statistics.hpp  timer.cpp  timer.hpp
src/benchmarks/: CMakeLists.txt  api.cpp  api.hpp  blackscholes.cpp  blackscholes.hpp  cfd.cpp  cfd.hpp  edge.cpp  edge.hpp  fft.cpp  fft.hpp  gemm.cpp  gemm.hpp  kmeans.cpp  kmeans.hpp  memory.cpp  memory.hpp  spmv.cpp  spmv.hpp  stencil.cpp  stencil.hpp  streamcluster.cpp  streamcluster.hpp  transpose.cpp  transpose.hpp  vecop.cpp  vecop.hpp
src/cl/: blackscholes.cl  edge.cl  fft.cl  gemm.cl  kmeans.cl  memory.cl  spmv.cl  stencil2d.cl  streamcluster.cl  transpose.cl  vecadd.cl
tools/elfsplit/: CMakeLists.txt  README  elfsplit.cpp
tools/elfunpack/: CMakeLists.txt  README  elfunpack.cpp
